--- a/Breno II-Módulo/style.css
+++ b/Breno II-Módulo/style.css
@@ -1,6 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+
 * {
   margin: 0;
   padding: 0;
+  font-family: 'Inter', sans-serif;
 }
 
 header {
@@ -32,7 +35,7 @@ nav {
 
 .header-nav-botao_cadastrar {
   background-color: #8e2424;
-  color: black;
+  color: #ffffff;
   border-radius: 8px;
   padding: 10px 18px;
 }
@@ -55,6 +58,7 @@ nav {
   color: #101828;
   font-size: 48px;
   font-weight: 600;
+  line-height: 60px;
 }
 
 .main-section-sobre_nos-texto_baixo {
@@ -64,8 +68,9 @@ nav {
 
 .main-section-dados {
   display: flex;
-  gap: 64px;
+  gap: 32px;
   padding: 0px 112px 96px 112px;
+  justify-content: space-between;
 }
 
 .main-section-dados-numeros{
@@ -92,9 +97,61 @@ nav {
   display: flex;
   gap: 12px;
   flex-direction: column;
+  width: 280px;
 }
 
-.main-section-dados-bloco_numero{
+.main-section-dados-bloco_texto{
+  flex-direction: column;
   display: flex;
   gap: 8px;
+}
+
+footer{
+  gap: 40px;
+  padding: 96px 0px 96px 0px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
+.footer-p-texto{
+  color: #101828;
+  font-size: 36px;
+  font-weight: 600;
+  line-height: 44px;
+}
+
+.footer-p-subtexto{
+  color: #667085;
+  font-size: 20px;
+  line-height: 30px;
+}
+
+.footer-div-input{
+  display: flex;
+  gap: 16px;
+}
+
+.footer-p-button{
+  color: #ffffff;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 24px;
+  background-color: #8e2424;
+  border-radius: 8px;
+  padding: 10px 18px;
+}
+
+input{
+  border-radius: 8px;
+  border-color: #D0D5DD;
+  width: 360px;
+  padding: 12px 14px 12px 16px;
+}
+
+.footer-final{
+  color: #98A2B3;
+  font-size: 16px;
+  line-height: 24px;
 }
