--- a/Breno II-Módulo/style.css
+++ b/Breno II-Módulo/style.css
@@ -1,5 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 
+:root{
+  --cor_padrao: #8e2424;
+  --cor_subpadrao: #667085;
+  /*variável css*/
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -7,34 +13,45 @@
 }
 
 header {
-  margin: 10px 50px;
+  margin: 18px 80px;
 }
 
 nav {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  gap: auto;
 }
 
 /*gap tbm conhecido como 'espaço' no figma*/
 .header-nav-logo {
-  gap: 32px;
+  padding: 0px 0px 0px 32px;
+  gap: 8px;
   color: #3a404e;
+  font-size: 18px;
+  line-height: 24px;
+  font-weight: 500;
 }
 
 .header-nav-links {
   gap: 40px;
-  color: #667085;
+  color: var(--cor_subpadrao);
+  margin-right: 370px;
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 500;
 }
 
 .header-nav-cadastro {
   gap: 12px;
-  color: #667085;
+  color: var(--cor_subpadrao);
+  padding: 0px 32px 0px 0px;
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 500;
 }
 
 .header-nav-botao_cadastrar {
-  background-color: #8e2424;
+  background-color: var(--cor_padrao);
   color: #ffffff;
   border-radius: 8px;
   padding: 10px 18px;
@@ -49,7 +66,7 @@ nav {
 }
 
 .main-section-sobre_nos-texto_cima {
-  color: #8e2424;
+  color: var(--cor_padrao);
   font-size: 16px;
   font-weight: 600;
 }
@@ -62,7 +79,7 @@ nav {
 }
 
 .main-section-sobre_nos-texto_baixo {
-  color: #667085;
+  color: var(--cor_subpadrao);
   font-size: 20px;
 }
 
@@ -74,7 +91,7 @@ nav {
 }
 
 .main-section-dados-numeros{
-  color: #8e2424;
+  color: var(--cor_padrao);
   font-size: 60px;
   font-weight: 600;
   line-height: 72px;
@@ -88,7 +105,7 @@ nav {
 }
 
 .main-section-dados-subtexto{
-  color: #667085;
+  color: var(--cor_subpadrao);
   font-size: 16px;
   line-height: 24px;
 }
@@ -123,7 +140,7 @@ footer{
 }
 
 .footer-p-subtexto{
-  color: #667085;
+  color: var(--cor_subpadrao);
   font-size: 20px;
   line-height: 30px;
 }
@@ -138,7 +155,7 @@ footer{
   font-size: 16px;
   font-weight: 500;
   line-height: 24px;
-  background-color: #8e2424;
+  background-color: var(--cor_padrao);
   border-radius: 8px;
   padding: 10px 18px;
 }
